fix(ingress): add spec.tls configuration for HTTPS

--- a/clusters/ollu/apps/whoami/whoami.yaml
+++ b/clusters/ollu/apps/whoami/whoami.yaml
@@ -47,6 +47,10 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - whoami.local.ollu.test
+      secretName: tls-whoami
   rules:
     - host: whoami.local.ollu.test
       http:
