--- a/clusters/ollu/apps/whoami/whoami.yaml
+++ b/clusters/ollu/apps/whoami/whoami.yaml
@@ -30,13 +30,12 @@ metadata:
   name: whoami-ghcr
   namespace: app-ollu
 spec:
-  type: NodePort
+  type: ClusterIP
   selector: { app: whoami-ghcr }
   ports:
     - name: http
       port: 80
       targetPort: 80
-      nodePort: 30080
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
