--- a/clusters/ollu/flux-system/kustomization.yaml
+++ b/clusters/ollu/flux-system/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ks-infra-ingress-nginx.yaml
   - gotk-components.yaml
   - gotk-sync.yaml
   - ks-infra-cert-manager.yaml
