flux(apps): garantir dependsOn para infra-ingress-nginx no ks-apps.yaml

--- a/clusters/ollu/flux-system/ks-apps.yaml
+++ b/clusters/ollu/flux-system/ks-apps.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   interval: 5m
   dependsOn:
+    - name: infra-ingress-nginx
     - name: infra-issuers
   sourceRef:
     kind: GitRepository
