--- a/clusters/ollu/infra/ingress-nginx/helmrelease.yaml
+++ b/clusters/ollu/infra/ingress-nginx/helmrelease.yaml
@@ -4,27 +4,4 @@ metadata:
   name: ingress-nginx
   namespace: ingress-nginx
 spec:
-  interval: 10m
-  chart:
-    spec:
-      chart: ingress-nginx
-      version: 4.13.3
-      sourceRef:
-        kind: HelmRepository
-        name: ingress-nginx
-        namespace: ingress-nginx
-  install:
-    remediation: { retries: 3 }
-  upgrade:
-    remediation: { retries: 3 }
-  values:
-    controller:
-      ingressClassResource:
-        name: nginx
-        controllerValue: "k8s.io/ingress-nginx"
-        default: true
-      service:
-        type: NodePort
-        nodePorts:
-          http: 30080
-          https: 30443
+  interval: 1m0s
