--- a/clusters/ollu/infra/ingress-nginx/helmrelease.yaml
+++ b/clusters/ollu/infra/ingress-nginx/helmrelease.yaml
@@ -5,3 +5,27 @@ metadata:
   namespace: ingress-nginx
 spec:
   interval: 1m0s
+  chart:
+    spec:
+      chart: ingress-nginx
+      version: ">=4.13.3 <4.14.0"
+      sourceRef:
+        kind: HelmRepository
+        name: ingress-nginx
+        namespace: ingress-nginx
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
+  values:
+    controller:
+      service:
+        type: NodePort
+        nodePorts:
+          http: 30080
+          https: 30443
+      ingressClassResource:
+        name: nginx
+        default: true
